cluster/apps/default/archivebox/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivebox
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archivebox
  template:
    metadata:
      labels:
        app: archivebox
    spec:
      containers:
        - name: archivebox
          image: archivebox/archivebox:latest
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: archivebox
