cluster/apps/default/archivebox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: archivebox
  namespace: default
spec:
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: archivebox
